@@ -78,6 +78,7 @@
 * New sysstats: sys_lamport, sys_tsrounding.  HStenn.
 * Update ntp.keys .../N documentation.  HStenn.
 * Distribute testconf.yml.  HStenn.
+* Add DPRINTF(2,...) lines to receive() for packet drops.  HStenn.
 
 ---
 (4.2.8p10) 2017/03/21 Released by Harlan Stenn <stenn@ntp.org>
